Wed Jul 26 20:44:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* environ.cc (posify): Revert previous patch.
	(_addenv): Remove check_null_empty_path from here.
	(putenv): Call check_nullempty_path.
	(setenv): Call check_nullempty_path for name as well here.
	Don't report an error if value is empty string.
	(environ_init): Revert usage of newp.

Wed Jul 26 14:32:38 2000  Egor Duda <deo@logos-m.ru>

	* syscalls.cc (stat_worker): Make stat return correct st_blocks for
	files with size bigger than 2Gb and less than 4Gb

Wed Jul 26 17:43:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* security.cc (lookup_name): Search on local machine first if
	myself->domain is not empty.

2000-07-26  DJ Delorie  <dj@cygnus.com>

	* fhandler_console.cc (fhandler_console::read): Explicitly set cursor
	to make it visible while waiting in WaitForMultipleObjects.

Wed Jul 26 10:59:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* passwd.cc: Change name of passwd_in_memory_p to passwd_state.
	Change type to enum. Change storage class to static. Adjust comments.
	(read_etc_passwd): Set passwd_state to different values when loaded
	from file in contrast to being emulated.
	(search_for): Return default passwd entry if passwd is emulated or
	it's a request for the current user. Otherwise return NULL.

Tue Jul 25 21:50:42 2000  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (statfs): Use path_conv method to convert input path.

Tue Jul 25 21:40:51 2000  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (_link): Avoid extraneous call to
	cygwin_conv_to_win32_path.

Tue Jul 25 21:11:15 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (_addenv): New function.  Subsumes functionality of
	putenv/setenv.  Does not allocate space for putenv case.
	(putenv): Use _addenv to add a value to the environment.
	(setenv): Ditto.
	(environ_init): Don't malloc space for each entry in the environment
	table.  Just use the space from GetEnvironmentStrings.